--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+:root {
+  --active-color: rgb(97, 97, 232);
+}
 body {
   margin: 0;
   font-family: "Albert Sans", sans-serif;
@@ -56,8 +59,8 @@ td {
 }
 
 .interview table {
-  width: 100%;
-  padding: 50px;
+  margin: 50px;
+  border-collapse: collapse;
 }
 
 .intro-section{
@@ -185,4 +188,27 @@ td {
 
 .nav-right h3{
   margin-bottom: 5px;
+}
+
+
+tr.excerpt {
+  border-style: solid;
+  border-width: 0 0 0 3px;
+  border-color: transparent;
+}
+tr.excerpt.active {
+  border-color: var(--active-color);
+}
+tr.excerpt td {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+.scroll-btn {
+  color: var(--active-color);
+  border: 2px solid currentColor;
+  border-radius: 10px;
+  padding: 10px;
+}
+.p-sm {
+  padding: 10px;
 }
