--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 :root {
-  --active-color: rgb(97, 97, 232);
+  --active-color: #000000;
+  --pewter: rgb(233,233,237);
+  --greenbeige: #dee6d7;
 }
 body {
   margin: 0;
@@ -49,8 +51,10 @@ td {
   display: flex;
 }
 
-.content{
+.content {
   max-width: 600px;
+  pointer-events: none;
+  cursor:default;
 }
 
 .interview {
@@ -119,6 +123,7 @@ td {
   padding: 5px 10px;
   border: 2px solid black;
   color: black;
+  background-color: var(--pewter);
   border-radius: 25px;
   margin-right: 5px;
 }
@@ -138,6 +143,7 @@ td {
     font-family: "Albert Sans", sans-serif;
     font-weight: bold;
     border: none;
+    cursor: pointer;
 }
 
 .list-container{
@@ -150,7 +156,7 @@ td {
   display: flex;
   height: 100vh;
   position: absolute;
-  background: #dee6d7;
+  background: var(--greenbeige);
   width: 100%;
   transform: translateX(0%);
   transition: transform 300ms ease-in-out;
@@ -177,6 +183,13 @@ td {
   position: sticky;
   top: 0;
   height: 100vh;
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.nav-left::-webkit-scrollbar {
+  display: none
 }
 
 .nav-right {
@@ -191,26 +204,32 @@ td {
   margin-bottom: 5px;
 }
 
-
 tr.excerpt {
   border-style: solid;
-  border-width: 0 0 0 3px;
+  border-width: 0 0 0 2px;
   border-color: transparent;
+  cursor: pointer;
 }
+
 tr.excerpt.active {
-  border-color: var(--active-color);
+  border-color: rgba(0,0,0,0.2);
 }
+
 tr.excerpt td {
   padding-top: 25px;
   padding-bottom: 25px;
 }
+
 .scroll-btn {
   color: var(--active-color);
+  background-color: var(--pewter);
   border: 2px solid currentColor;
   border-radius: 10px;
   padding: 10px;
   width: 100%;
+  cursor: pointer;
 }
+
 .p-sm {
   padding: 10px;
 }
