Extract background color into variable

--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
   --active-color: #000000;
   --pewter: rgb(233,233,237);
   --greenbeige: #dee6d7;
+  --beige: #F3EEE4;
 }
 
 body {
   margin: 0;
   font-family: "Albert Sans", sans-serif;
-  background: #F3EEE4;
+  background: var(--beige);
 }
 
 h1,h2,h3 {
