--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
-  --pewter: rgb(233,233,237);
+  --pewter: rgb(233, 233, 237);
   --greenbeige: #dee6d7;
-  --beige: #F3EEE4;
+  --beige: #f3eee4;
 }
 
 body {
@@ -10,7 +10,9 @@ body {
   background: var(--beige);
 }
 
-h1,h2,h3 {
+h1,
+h2,
+h3 {
   font-family: "Spectral", serif;
 }
 
@@ -70,7 +72,7 @@ td {
   border-collapse: collapse;
 }
 
-.intro-section{
+.intro-section {
   padding: 50px;
   border-bottom: 2px solid black;
 }
@@ -79,9 +81,9 @@ td {
   flex: 1;
   height: 100vh;
   align-self: flex-start;
-    position: sticky;
-    top: 0;
-    border-left: 2px solid black;
+  position: sticky;
+  top: 0;
+  border-left: 2px solid black;
 }
 
 .meta-section img {
@@ -93,11 +95,11 @@ td {
   flex: 2;
 }
 
-.name-section{
+.name-section {
   padding: 0 50px;
 }
 
-.name-section h3{
+.name-section h3 {
   font-family: "Albert Sans", sans-serif;
   font-weight: bold;
   text-transform: uppercase;
@@ -109,14 +111,14 @@ td {
 
 .list-container button {
   background: none;
-    font-size: 20px;
-    padding: 10px 20px;
-    margin-right: 15px;
-    text-transform: uppercase;
-    font-family: "Albert Sans", sans-serif;
-    font-weight: bold;
-    border: none;
-    cursor: pointer;
+  font-size: 20px;
+  padding: 10px 20px;
+  margin-right: 15px;
+  text-transform: uppercase;
+  font-family: "Albert Sans", sans-serif;
+  font-weight: bold;
+  border: none;
+  cursor: pointer;
 }
 
 .list-container button:hover {
@@ -124,28 +126,28 @@ td {
 }
 
 #menu {
-    position: absolute;
-    right: -45px;
-    top: 0;
-    height: 100%;
-    background: none;
-    font-size: 20px;
-    right: 0;
-    text-transform: uppercase;
-    font-family: "Albert Sans", sans-serif;
-    font-weight: bold;
-    border-right: 0px;
-    border-top: 0px;
-    border-bottom: 0px;
-    cursor: pointer;
-    transition: background 1s ease;
+  position: absolute;
+  right: -45px;
+  top: 0;
+  height: 100%;
+  background: none;
+  font-size: 20px;
+  right: 0;
+  text-transform: uppercase;
+  font-family: "Albert Sans", sans-serif;
+  font-weight: bold;
+  border-right: 0px;
+  border-top: 0px;
+  border-bottom: 0px;
+  cursor: pointer;
+  transition: background 1s ease;
 }
 
 #menu:hover {
   background: #bdcdb2;
 }
 
-.menu-text{
+.menu-text {
   rotate: -90deg;
 }
 
@@ -179,9 +181,9 @@ td {
   font-size: 14px;
   margin: 10px 0;
   max-width: 250px;
-  background-color:var(--pewter);
+  background-color: var(--pewter);
   padding: 5px;
-  border: 1px rgba(0,0,0,0.5) dashed;
+  border: 1px rgba(0, 0, 0, 0.5) dashed;
   border-radius: 8px;
   cursor: default;
 }
@@ -198,7 +200,7 @@ td {
   margin-bottom: 0;
 }
 
-.list-container{
+.list-container {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -221,7 +223,7 @@ td {
   border-right: 2px solid black;
 }
 
-#nav.hidden-nav{
+#nav.hidden-nav {
   transform: translateX(calc(-100% + 72px));
 }
 
@@ -246,7 +248,7 @@ td {
 }
 
 .nav-left::-webkit-scrollbar {
-  display: none
+  display: none;
 }
 
 .nav-right {
@@ -256,11 +258,12 @@ td {
   padding-right: 72px;
 }
 
-.nav-right h2, .nav-right h3 {
+.nav-right h2,
+.nav-right h3 {
   text-align: left;
 }
 
-.nav-right h3{
+.nav-right h3 {
   margin-bottom: 5px;
 }
 
@@ -269,8 +272,8 @@ tr.excerpt {
   border-width: 0 0 0 2px;
   border-color: transparent;
   border-left: 2px solid transparent;
-  transition: border .3s ease;
-  transition: background .3s ease;
+  transition: border 0.3s ease;
+  transition: background 0.3s ease;
 }
 
 tr.excerpt.active {
@@ -297,7 +300,7 @@ tr.excerpt td {
   padding: 10px;
 }
 
-@media only screen and (max-width : 1024px) {
+@media only screen and (max-width: 1024px) {
   h1 {
     font-size: 3em;
     text-align: center;
@@ -308,7 +311,7 @@ tr.excerpt td {
     height: auto;
   }
 
-  #nav.hidden-nav{
+  #nav.hidden-nav {
     transform: translateY(calc(-100% + 40px));
   }
 
@@ -389,5 +392,4 @@ tr.excerpt td {
   .interview table {
     margin: 10px;
   }
-
 } /* end narrow mode media query block */
